Implement persistent material validation jobs (#3)
